<resources>
    <string name="app_name">Health Manager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign up</string>
    <string name="or_login_with">Or login with</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="do_not_have_account">Don\'t have an account yet?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="register_here">\ Register here</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="invalid_email_format_please_check_the_entered_address">Invalid email format. Please check the entered address.</string>
    <string name="please_fill_in_all_fields">Please fill in all fields.</string>
    <string name="the_email_address_is_already_in_use_by_another_account">The email address is already in use by another account</string>
    <string name="password_should_be_at_least_6_characters">Password should be at least 6 characters</string>
    <string name="verify_email_address">Verify email address</string>
    <string name="we_have_sent_a_notification_to_your_email_address">We have sent a notification to your email address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_verify_your_email_address_to_complete_registration">Please verify your email address to complete registration.</string>
    <string name="back"><![CDATA[<-Back]]></string>
    <string name="finish"><![CDATA[Finish->]]></string>
    <string name="you_haven_t_received_a_message_yet">You haven\'t received a message yet․</string>
    <string name="send_again">Send again</string>
    <string name="failed_to_send_confirmation_email">Failed to send confirmation email.</string>
    <string name="no_user_found_with_email">No user found with this email address.</string>
    <string name="invalid_password_please_check_the_entered_password">Invalid password. Please check the entered password.</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password">Enter your email and we\'ll send you a link to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="back_to_login"><![CDATA[< Back to login]]></string>
    <string name="user_not_found">User not found.</string>
    <string name="please_enter_your_email_address">Please enter your email address.</string>
    <string name="please_verify_your_email_address_to_login">Please verify your email address to login.</string>
    <string name="register_again">Register again</string>
    <string name="default_web_client_id" translatable="false">1014916142833-k361aepgn98iuq9dsbaapa6fo439vilc.apps.googleusercontent.com</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="the_passwords_don_t_match">The passwords don\'t match.</string>
    <string name="developed_by">Developed by Hayk Zazyan</string>
    <string name="add_a_med">Add a Med</string>
    <string name="medication_name">Medication Name</string>
    <string name="what_med_would_you_like_to_add">What med would you like to add?</string>
    <string name="pill">Pill</string>
    <string name="injection">Injection</string>
    <string name="solution">Solution</string>
    <string name="drops">Drops</string>
    <string name="powder">Powder</string>
    <string name="other">Other</string>
    <string name="what_form_is_the_med">What form is the med?</string>
    <string name="every_day">Every day</string>
    <string name="every_other_day">Every other day</string>
    <string name="every_x_days">Every X days</string>
    <string name="specific_days_of_the_week">Specific days of the week</string>
    <string name="every_x_weeks">Every X weeks</string>
    <string name="every_x_months">Every X months</string>
    <string name="how_often_do_you_take_it">How often do you take it?</string>
    <string name="once_a_day">Once a day</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="more_than_2_times_a_day">More than 2 times a day</string>
    <string name="every_x_hours">Every X hours</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursdays">Thursdays</string>
    <string name="friday">Friday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="on_which_days_s_do_you_need_to_take_the_med">On which days(s) do you need to take the med</string>
    <string name="when_do_you_need_to_take_dose">When do you need to take dose?</string>
    <string name="next">Next</string>
    <string name="times_a_day">Times a day</string>
    <string name="how_many_times_day">How many times day</string>
    <string name="when_do_you_need_to_take_the_first_dose">When do you need to take the first dose?</string>
    <string name="when_do_you_need_to_take_the_second_dose">When do you need to take the second dose?</string>
    <string name="set_hours_interval">Set hours interval</string>
    <string name="when_do_you_need_to_take_the_next_dose">When do you need to take the next dose?</string>
    <string name="days">Days</string>
    <string name="week_s">week(s)</string>
    <string name="every">Every</string>
    <string name="month_s">Month(s)</string>
    <string name="set_days_interval">Set days interval</string>
    <string name="set_weeks_interval">Set weeks interval</string>
    <string name="set_months_interval">Set months interval</string>
    <string name="review_your_planned_reminders">Review your planned reminders</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="ok">Ok</string>
    <string name="what_also_would_you_like_to_add">What also would you like to add</string>
    <string name="before_eating">Before eating</string>
    <string name="after_eating">After eating</string>
    <string name="from_eating">During eating</string>
    <string name="when_should_we_remind_you_to_refill_your_prescription">When should we remind you to refill your prescription?</string>
    <string name="how_many_pill_s_do_you_have_left">How many Pill(s) do you have left?</string>
    <string name="should_this_be_taken_with_food">Should this be taken with food?</string>
    <string name="add_instruction">Add instruction</string>
    <string name="specify_the_time_of_use_of_the_med_with_food">Specify the time of use of the med with food</string>
    <string name="set_medications_count">Set medications count</string>
    <string name="save">Save</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_med_instruction">Add med instruction</string>
    <string name="how_much_many_do_you_take_it">How much / many do you take it?</string>
    <string name="pill_s">pill(s)</string>
    <string name="ml">mL</string>
    <string name="syringe_s">Syringe(s)</string>
    <string name="unit">Unit</string>
    <string name="ampules_s">Ampules(s)</string>
    <string name="vial_s">Vial(s)</string>
    <string name="cup_s">Cup(s)</string>
    <string name="drop_s">Drop(s)</string>
    <string name="packet_s">Packet(s)</string>
    <string name="gram_s">Gram(s)</string>
    <string name="tablespoon_s">Tablespoon(s)</string>
    <string name="teaspoon_s">Teaspoon(s)</string>
    <string name="how_much_many_do_you_have_left">How much / many do you have now?</string>
    <string name="add_a_visit">Add a Visit</string>
    <string name="when_should_you_go_for_your_visit">When should you go for your visit?</string>
    <string name="what_time_should_you_go_for_your_visit">What time should you go for your visit?</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="visit_name">Visit name</string>
    <string name="what_would_you_like_to_name_the_visit">What would you like to name the visit?</string>
    <string name="please_enter_the_visit_name">Please enter the visit name</string>
    <string name="add_doctor_details">Add Doctor Details</string>
    <string name="add_hospital_details">Add Hospital Details</string>
    <string name="add_comments">Add Comments</string>
    <string name="phone_number">Phone number</string>
    <string name="specialization">Specialization</string>
</resources>