<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="520dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fragment_background"
    android:layout_gravity="center"
    android:elevation="20dp"
    android:padding="20dp"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verify_email_icon"
        app:layout_constraintHeight_percent="0.25" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/logo"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0" />
        <TextView
            android:id="@+id/login_verification_fragment_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/verification_fragment_login_second_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/please_verify_your_email_address_to_login"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0" />
        <Button
            android:id="@+id/verification_fragment_login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:text="@string/login" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/register_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_again"
            android:textSize="20sp"
            android:textColor="@drawable/pressed_text_color"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/you_haven_t_received_a_message_yet"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/send_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_again"
        android:textColor="@drawable/pressed_text_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
    <TextView
        android:id="@+id/back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="@drawable/pressed_text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>