<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/fragment_background"
    android:layout_gravity="center"
    android:elevation="20dp">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/password_logo"
        app:layout_constraintHeight_percent="0.25" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/logo"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password_"
            >

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password"
            >

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/forgot_password_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0" />

        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/submit" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0" />
        <TextView
            android:id="@+id/forgot_password_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_to_login"
            android:gravity="center_horizontal"
            android:textColor="@drawable/pressed_text_color"
            android:textSize="20sp"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>